--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,6 @@ body {
 }
 .container h2 {
   font-size: 150px;
-  font-weight: 700;
   font-family: "Work Sans", sans-serif;
   color: #fff;
   margin: 0;
@@ -29,28 +28,47 @@ body {
 .btn-part {
   padding: 0 0 20px 0;
 }
+.btn-part i {
+  padding: 3px 10px;
+  color: #fff;
+}
 button {
   font-size: 25px;
-  font-weight: 700;
   font-weight: 600;
   padding: 2px 15px;
   border: 2px solid #d4d4d4;
   border-radius: 5px;
   transition: 0.3s;
-  background-color: #d4d4d4;
 }
-button#remove:hover {
+button#remove {
   background: red;
 }
-button#add:hover {
+button#add {
   background: green;
 }
-button#reset:hover {
-  background: #5f3be0;
-}
-.btn-part i {
-  padding: 3px 10px;
-}
 button#reset {
+  background: #5f3be0;
   margin: 0 20px 0px 20px;
+}
+
+button#remove:hover {
+  background: #fff;
+  border: 2px solid red;
+}
+button#remove:hover i {
+  color: red;
+}
+button#reset:hover {
+  background: #fff;
+  border: 2px solid #5f3be0;
+}
+button#reset:hover i {
+  color: #5f3be0;
+}
+button#add:hover {
+  background: #fff;
+  border: 2px solid green;
+}
+button#add:hover i {
+  color: green;
 }
